# RTv1

./: .gitmodules  CMakeLists.txt  README.md
include/: app_funcs.h  rtv_structs.h  vector.h
src/: ft_vecsphereinter.c  init_rtv.c  read_args.c  read_scene.c  render_scene.c  run_app.c
